--- a/style/style.css
+++ b/style/style.css
@@ -7,6 +7,15 @@ h1 {
     text-transform: uppercase;
     line-height: 40px;
 }
+a {
+    color: inherit;
+    cursor: pointer;
+}
+a:hover {
+    color: inherit;
+    text-decoration: none;
+    opacity: 80%;;
+}
 h2 {
     font-size: 52px;
     font-family: 'Roboto', sans-serif;
@@ -21,9 +30,9 @@ div {
 .tile {
     padding: 10px;
     border-radius: 12px;
+    cursor: pointer;
 }
 .tile:hover {
-    cursor: pointer;
     padding: 5px;
 }
 .square {
