--- a/style/style.css
+++ b/style/style.css
@@ -1,10 +1,11 @@
 /* div {
     border: .1px solid darkgrey;
 } */
+/* homepage styling */
 body {
   font-family: Roboto;
   font-style: normal;
-  background-image: url("../img/sneakycats.jpg");
+  /* background-image: url("../img/sneakycats.jpg"); */
 }
 .header {
   background-color: #06061F;
@@ -75,6 +76,11 @@ body {
   background-color: black;
   cursor: pointer;
 }
+.projectselected {
+  border: 4px solid black;
+  background-color: black;
+  cursor: pointer;
+}
 .navlink {
   transition: 0.3s;
 }
@@ -113,7 +119,22 @@ body {
   }
 }
 
-
+/* karuna styling */
+.bodytext {
+  font-weight: 300;
+  font-size: 26px;
+  line-height: 36px;
+  display: block;
+}
+.bold900 {
+ font-weight: 900;
+}
+.bold700 {
+  font-weight: 700;
+ }
+ .bold500 {
+  font-weight: 500;
+ }
 
 
 a {
